get proper licence data on overview

--- a/module/Olcs/view/licence/overview.phtml
+++ b/module/Olcs/view/licence/overview.phtml
@@ -27,12 +27,12 @@
   <a href="#"><?php echo $this->translate('licence.print'); ?></a><br />
   <a href="#"><?php echo $this->translate('licence.delete'); ?></a>
   <p>
-    <?php echo $this->translate('created'); ?><br />
-    <strong><?php echo $createdOn; ?></strong>
+    <?php echo $this->translate('started'); ?><br />
+    <strong><?php echo $grantedDate; ?></strong>
   </p>
   <p>
     <?php echo $this->translate('renewal'); ?><br />
-    <strong><?php echo $renewal; ?></strong>
+    <strong><?php echo $expiryDate; ?></strong>
   </p>
   <p>
     <?php echo $this->translate('status'); ?><br />
