--- a/module/Olcs/view/overview_section.phtml
+++ b/module/Olcs/view/overview_section.phtml
@@ -3,5 +3,5 @@
     <?php if (isset($status)): ?>
         <span><?php echo $this->translate($status); ?></span>
     <?php endif; ?>
-    <a href="<?php echo $this->url($route, array('id' => $applicationId)); ?>" style="width: 200px; text-align: right" class="right-aligned"><?php echo $this->translate($link); ?></a>
+    <a href="<?php echo $this->url($route, array('id' => $identifier)); ?>" style="width: 200px; text-align: right" class="right-aligned"><?php echo $this->translate($link); ?></a>
 </li>
