--- a/module/Olcs/view/section.phtml
+++ b/module/Olcs/view/section.phtml
@@ -1,1 +1,23 @@
-<h1>Section</h1>
+<?php
+if (isset($title)) {
+    ?>
+    <h2><?php echo $this->translate($title); ?></h2>
+    <?php
+}
+
+
+if (isset($table)) {
+    echo $table;
+}
+
+if (isset($form)) {
+    $form->prepare();
+    echo $this->formErrors($form);
+    echo $this->form($form);
+}
+
+if (isset($scripts)) {
+    foreach ($scripts as $script) {
+        $this->inlineScript()->appendScript($script);
+    }
+}
