Added 'dashboard' class for dashboard wrapping div.

--- a/module/Olcs/view/self-serve/dashboard/index.phtml
+++ b/module/Olcs/view/self-serve/dashboard/index.phtml
@@ -8,7 +8,7 @@
     );
 ?>
 
-<div class="three-quarters">
+<div class="dashboard three-quarters">
     <?php echo $licencesTable; ?>
 
     <?php echo $variationApplicationsTable; ?>
