initial application payment and summary logic

--- a/module/Olcs/view/application/overview.phtml
+++ b/module/Olcs/view/application/overview.phtml
@@ -27,6 +27,10 @@
       }
       ?>
   </ul>
+
+  <?php if (isset($submissionForm)): ?>
+    <?php echo $this->form($submissionForm); ?>
+  <?php endif ?>
 </div>
 <div class="one-third sidebar">
   <dl class="meta">
