re-add placeholder header

--- a/module/Olcs/view/application/summary.phtml
+++ b/module/Olcs/view/application/summary.phtml
@@ -1,3 +1,7 @@
+<div class="page-header">
+    <h1>Thank you</h1>
+    <h3 class="page-header__subtitle">Your application has been submitted successfully!</h3>
+</div>
 <div class="three-quarters">
     <h3>Summary</h3>
     <dl>
