--- a/module/Olcs/view/overview_section.phtml
+++ b/module/Olcs/view/overview_section.phtml
@@ -1,7 +1,7 @@
 <li class="overview-item <?php echo ($enabled ? '' : 'disabled'); ?>">
   <div class="overview-item__header">
     <?php if ($enabled) : ?>
-        <a href="<?php echo $this->url($route, array('id' => $identifier)); ?>" class="overview-item__control">
+        <a href="<?php echo $this->url($route, array($identifierIndex => $identifier)); ?>" class="overview-item__control">
     <?php endif; ?>
     <h4><?php echo $this->translate($name); ?></h4>
     <?php if ($enabled) : ?>
@@ -9,7 +9,7 @@
         <?php if (isset($status)): ?>
             <span class="status <?php echo $statusColour; ?>"><?php echo $this->translate($status); ?></span>
         <?php endif; ?>
-        <a href="<?php echo $this->url($route, array('id' => $identifier)); ?>" class="overview-item__edit"><?php echo $this->translate($link); ?></a>
+        <a href="<?php echo $this->url($route, array($identifierIndex => $identifier)); ?>" class="overview-item__edit"><?php echo $this->translate($link); ?></a>
     <?php endif; ?>
   </div>
 </li>
