Fixes flash messages

--- a/module/Olcs/view/olcs/uploads/index.phtml
+++ b/module/Olcs/view/olcs/uploads/index.phtml
@@ -8,5 +8,8 @@ echo $this->render(
 );
 ?>
 
-<?php echo $this->flashMessengerAll(); ?>
+<div class="two-thirds">
+<?php echo $this->flashMessengerAll();?>
+
 <?php echo $this->table; ?>
+</div>
