--- a/module/Olcs/view/application/overview.phtml
+++ b/module/Olcs/view/application/overview.phtml
@@ -7,6 +7,9 @@
 ?>
 
 <div class="page-header">
+  <ol class="breadcrumbs">
+    <li class="breadcrumbs__item"><a href="/">Home</a></li>
+  </ol>
   <div class="page-header__wrapper">
     <h3 class="page-header__subtitle">
         <?php echo $this->translate('application.overview.application-no'); ?> <?php echo $applicationId; ?>
@@ -19,7 +22,7 @@
   </ul>
 </div>
 <div class="two-thirds">
-    <?php echo $this->flashMessengerAll(); ?>
+  <?php echo $this->flashMessengerAll(); ?>
   <ul class="overview-navigation">
       <?php
       foreach ($sections as $section) {
