--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -2,12 +2,12 @@
 echo $this->render(
     '/partials/page-header.phtml',
     array(
-        'pageTitle' => $this->translate('Ebsr Pack upload'),
-        'pageSubTitle'=> $this->translate('Use this form to upload an ebsr pack'),
+        'pageTitle' => $this->translate('Ebsr pack upload'),
+        'pageSubTitle'=> $this->translate('Use this form to upload an EBSR pack'),
     )
 );
 ?>
-<div class="two-thirds">
+<div class="three-quarters">
 <?php echo $this->flashMessengerAll(); ?>
 
 <?php
