--- a/module/Olcs/view/overview-application.phtml
+++ b/module/Olcs/view/overview-application.phtml
@@ -8,7 +8,7 @@
 
 <div class="page-header">
   <ol class="breadcrumbs">
-    <li class="breadcrumbs__item"><a href="/">Home</a></li>
+    <li class="breadcrumbs__item"><a href="/dashboard">Home</a></li>
   </ol>
   <div class="page-header__wrapper">
     <h3 class="page-header__subtitle">
