--- a/module/Olcs/view/section.phtml
+++ b/module/Olcs/view/section.phtml
@@ -5,6 +5,11 @@
   <div class="page-header__wrapper">
   <h3 class="page-header__subtitle">Step X of Y</h3>
   <h1><?php echo $this->translate($title); ?></h1>
+  <?php
+  if (isset($sectionText)) {
+      ?><p><?php echo $this->translate($sectionText); ?></p><?php
+  }
+  ?>
   </div><!-- .page-header__wrapper -->
 </div><!-- .page-header-->
 
