Updates header and overview markup

--- a/module/Olcs/view/dashboard.phtml
+++ b/module/Olcs/view/dashboard.phtml
@@ -24,7 +24,7 @@
 <div class="one-third sidebar">
 
   <div class="links">
-    <h3>Useful information for operators</h3>
+    <h3>Useful information for vehicle operators</h3>
     <ul class="links-list">
       <li class="links-list__item"><a href="">Complete your applications for a goods vehicle operator's licence</a></li>
       <li class="links-list__item"><a href="">Advertise your application for a licence</a></li>
