--- a/module/Olcs/view/overview-application.phtml
+++ b/module/Olcs/view/overview-application.phtml
@@ -21,7 +21,7 @@
     <li><a href="" class="page-header__action"><?php echo $this->translate('application.cancel'); ?></a></li>
   </ul>
 </div>
-<div class="two-thirds">
+<div class="two-thirds border">
   <?php echo $this->flashMessengerAll(); ?>
   <ul class="overview-navigation">
       <?php
