--- a/module/Olcs/view/overview-licence.phtml
+++ b/module/Olcs/view/overview-licence.phtml
@@ -24,7 +24,7 @@
     <li><a href="" class="page-header__action"><?php echo $this->translate('licence.surrender'); ?></a></li>
   </ul>
 </div>
-<div class="two-thirds">
+<div class="two-thirds border">
     <?php echo $this->flashMessengerAll(); ?>
   <ul class="overview-navigation">
       <?php
