--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -17,7 +17,7 @@
         <a href="/dashboard" title="Go to dashboard" class="global-header__logo">
           <img src="<?php echo $this->assetPath('/images/gov.uk_logotype_crown.png') ?>" alt="GOV.UK logo">GOV.UK
         </a>
-        <h2 class="global-header__title">Vehcile operator licensing</h2>
+        <h2 class="global-header__title">Vehicle operator licensing</h2>
       </div><!-- end .global-header__wrapper -->
     </div><!-- end .global-header -->
 
