--- a/module/Olcs/view/pages/lva-details.phtml
+++ b/module/Olcs/view/pages/lva-details.phtml
@@ -3,7 +3,15 @@
     <li class="breadcrumbs__item"><a href="">Back to overview</a></li>
   </ol>
   <div class="page-header__wrapper">
-    <h3 class="page-header__subtitle">Step X of Y</h3>
+    <h3 class="page-header__subtitle">
+<?php
+if(isset($stepY)):
+  echo sprintf($this->translate('application.steps'), $stepX, $stepY);
+else:
+  echo sprintf($this->translate('application.step'), $stepX);
+endif;
+?>
+    </h3>
     <h1 class="js-title"><?php echo $this->translate($title); ?></h1>
   </div><!-- .page-header__wrapper -->
 </div><!-- .page-header-->
