--- a/module/Olcs/view/pages/lva-details.phtml
+++ b/module/Olcs/view/pages/lva-details.phtml
@@ -5,10 +5,14 @@
   <div class="page-header__wrapper">
     <h3 class="page-header__subtitle">
 <?php
-if(isset($stepY)):
-  echo sprintf($this->translate('application.steps'), $stepX, $stepY);
+if (isset($stepX)):
+  if(isset($stepY)):
+    echo sprintf($this->translate('application.steps'), $stepX, $stepY);
+  else:
+    echo sprintf($this->translate('application.step'), $stepX);
+  endif;
 else:
-  echo sprintf($this->translate('application.step'), $stepX);
+  echo "Step X of Y"; // fall back to original behaviour where not implemented across LVA
 endif;
 ?>
     </h3>
