--- a/module/Olcs/view/partials/overview_section.phtml
+++ b/module/Olcs/view/partials/overview_section.phtml
@@ -4,7 +4,7 @@
   <?php else : ?>
   <div class="overview-item__link">
   <?php endif; ?>
-  <h4><?php echo $this->translate($name); ?></h4>
+  <h4><?php echo $sectionNumber . '. ' . $this->translate($name); ?></h4>
   <?php if ($enabled) : ?>
     <?php if (isset($status)): ?>
       <span class="status <?php echo $statusColour; ?>"><?php echo $this->translate($status); ?></span>
