--- a/module/Olcs/view/overview-application.phtml
+++ b/module/Olcs/view/overview-application.phtml
@@ -7,9 +7,7 @@
 ?>
 
 <div class="page-header">
-  <ol class="breadcrumbs">
-    <li class="breadcrumbs__item"><a href="/dashboard">Home</a></li>
-  </ol>
+    <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
   <div class="page-header__wrapper">
     <h3 class="page-header__subtitle">
         <?php echo $this->translate('application.overview.application-no'); ?> <?php echo $applicationId; ?>
