--- a/module/Olcs/view/overview-licence.phtml
+++ b/module/Olcs/view/overview-licence.phtml
@@ -6,6 +6,7 @@
  */
 ?>
 <div class="page-header">
+  <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
   <div class="page-header__wrapper">
     <h3 class="page-header__subtitle">
         <?php echo $this->translate('licence.overview.licence-no'); ?> <?php echo $licenceId; ?>
