--- a/module/Olcs/view/pages/lva-details.phtml
+++ b/module/Olcs/view/pages/lva-details.phtml
@@ -1,7 +1,5 @@
 <div class="page-header">
-  <ol class="breadcrumbs">
-    <li class="breadcrumbs__item"><a href="">Back to overview</a></li>
-  </ol>
+  <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
   <div class="page-header__wrapper">
     <h3 class="page-header__subtitle">
 <?php
