post-application summary

--- a/module/Olcs/view/overview-variation.phtml
+++ b/module/Olcs/view/overview-variation.phtml
@@ -38,7 +38,7 @@
         <dd><?php echo strftime("%d %B %G",strtotime($receivedDate)); ?></dd>
     <?php endif; ?>
     <?php if ($completionDate): ?>
-        <dt><?php echo $this->translate('selfserve-dashboard-target-completion-date'); ?></dt>
+        <dt><?php echo $this->translate('target-completion-date'); ?></dt>
         <dd><?php echo strftime("%d %B %G",strtotime($completionDate)); ?></dd>
     <?php endif; ?>
   </dl>
