--- a/module/Olcs/view/overview-variation.phtml
+++ b/module/Olcs/view/overview-variation.phtml
@@ -28,6 +28,9 @@
       }
       ?>
   </ul>
+  <?php if (isset($submissionForm)): ?>
+    <?php echo $this->form($submissionForm); ?>
+  <?php endif ?>
 </div>
 <div class="one-third sidebar">
   <dl class="meta">
